--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
     "core-js": "^3.6.5",
+    "jquery": "^3.6.4",
     "mapbox-gl": "^2.3.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.8"
