--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "axios": "^1.3.6",
     "core-js": "^3.6.5",
     "jquery": "^3.6.4",
     "mapbox-gl": "^2.3.0",
